manifests/internal/hello-go-internal-ingress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-go-internal
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  type: NodePort 
  selector:
    app: hello-go
