manifests/internal/hello-go-internal-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ilb-hello-go 
  annotations:
    cloud.google.com/load-balancer-type: "Internal"
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  type: LoadBalancer
  selector:
    app: hello-go
